--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ node_modules/
 pnpm-lock.yaml
 package-lock.json
 yarn-lock.json
+.vercel
+
+
+#Ignore vscode AI rules
+.github/instructions/codacy.instructions.md
